--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "decouple>=0.0.7",
     "django>=5.2.7",
+    "psycopg2>=2.9.11",
     "wheel>=0.45.1",
 ]
