--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "decouple>=0.0.7",
     "django>=5.2.7",
-    "psycopg2>=2.9.11",
+    "psycopg>=3.2.12",
     "wheel>=0.45.1",
 ]
