--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "decouple>=0.0.7",
     "django>=5.2.7",
     "psycopg>=3.2.12",
+    "python-decouple>=3.8",
     "wheel>=0.45.1",
 ]
